# Integrator

./: .gitignore  PLAN.md  README.md  code.txt  core.py  example.py  filter.py  jaxpr.txt  pyproject.toml  results.py  runs.jsonl  sensitivity.py  show.py  show3d.py  sim.py  simulate.py  test_pdmp.py
pdmp/: __init__.py  core.py  example.py  sensitivity.py  simulate.py
tests/: test_pdmp.py
