[tool.poetry]
name = "integrator"
version = "0.1.0"
description = ""
authors = ["Mikhail Budnikov <msh24819@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
jax = "^0.4.28"
jaxlib = "^0.4.28"
beartype = "^0.18.5"
jaxtyping = "^0.2.28"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
